--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -22,3 +22,12 @@ div.dataTables_wrapper div.dataTables_paginate ul.pagination {
     justify-content: flex-end;
     gap: 10px;
 }
+
+/* .card-body #employees-table_wrapper .row {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-right: 10px;
+    padding-left: 10px;
+    margin-bottom: 10px;
+} */
