--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -243,3 +243,27 @@ div.dataTables_wrapper div.row:last-of-type {
 td.dataTables_empty {
     text-align: center;
 }
+
+.swal-confirm-btn{
+    background: #8d35e3;
+    color: #fff;
+    border-radius: 8px;
+    padding: 6px 10px;
+    height: auto;
+    box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.05);
+}
+
+.swal-cancel-btn{
+    background: #dc3545;
+    color: #fff;
+    border-radius: 8px;
+    padding: 6px 10px;
+    height: auto;
+    box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.05);
+}
+
+.swal2-actions{
+    display: flex;
+    justify-content: space-between;
+    gap: 10px;
+}
