--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -229,7 +229,9 @@ div.dataTables_wrapper div.row:last-of-type {
     outline: none;
 }
 
-.select2-container--default .select2-selection--single .select2-selection__clear {
+.select2-container--default
+    .select2-selection--single
+    .select2-selection__clear {
     margin-right: 0px !important;
 }
 /* Placeholder text */
@@ -244,7 +246,7 @@ td.dataTables_empty {
     text-align: center;
 }
 
-.swal-confirm-btn{
+.swal-confirm-btn {
     background: #8d35e3;
     color: #fff;
     border-radius: 8px;
@@ -253,7 +255,7 @@ td.dataTables_empty {
     box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.05);
 }
 
-.swal-cancel-btn{
+.swal-cancel-btn {
     background: #dc3545;
     color: #fff;
     border-radius: 8px;
@@ -262,8 +264,24 @@ td.dataTables_empty {
     box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.05);
 }
 
-.swal2-actions{
+.swal2-actions {
     display: flex;
     justify-content: space-between;
     gap: 10px;
+}
+
+.filterDatePicker {
+    border: 1px solid #8c35e373;
+    /* Tailwind gray-300 */
+    border-radius: 0.5rem;
+    /* rounded */
+    padding: 6px 10px;
+    font-size: 14px;
+    outline: none;
+    color: #92979e;
+}
+
+#lead-table tbody tr:hover {
+    background-color: rgba(141, 53, 227, 0.05);
+    transition: all 0.2s ease-in-out;
 }
