--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -980,22 +980,31 @@ select:not([size]){
   border-color: transparent;
   background-color: currentColor;
 }
+
 [type='file']{
-  background: unset;
-  border-color: inherit;
-  border-width: 0;
-  border-radius: 0;
-  padding: 0;
-  font-size: unset;
-  line-height: inherit;
+     width: 100%;
+  border-radius: 0.5rem;
+  border: 1px solid rgb(209 213 219 / var(--tw-border-opacity, 1));
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
+  /* padding: 0.625rem 1.25rem; */
+  transition: all 0.2s ease;
+  outline: none;
 }
-[type='file']:focus{
-  outline: 1px auto inherit;
+
+[type='file']:hover {
+  border-color: rgb(141 53 227 / 1);
 }
+
+[type='file']:focus {
+  border-color: rgb(141 53 227 / 1);
+  box-shadow: 0 0 0 2px rgba(141, 53, 227, 0.25);
+  outline: none;
+}
+
 input[type=file]::file-selector-button{
   color: white;
-  background: #1F2937;
-  border: 0;
+  background: #8D35E3;
+
   font-weight: 500;
   font-size: 0.875rem;
   cursor: pointer;
@@ -1007,7 +1016,7 @@ input[type=file]::file-selector-button{
   margin-inline-end: 1rem;
 }
 input[type=file]::file-selector-button:hover{
-  background: #374151;
+  background: rgb(141 53 227 / 0.6);
 }
 :is([dir=rtl]) input[type=file]::file-selector-button{
   padding-right: 2rem;
@@ -1015,15 +1024,42 @@ input[type=file]::file-selector-button:hover{
 }
 .dark input[type=file]::file-selector-button{
   color: white;
-  background: #4B5563;
+  background: rgb(141 53 227 / 0.6);
 }
 .dark input[type=file]::file-selector-button:hover{
-  background: #6B7280;
+  background: rgb(141 53 227 / 0.6);
 }
+
+
+/* .form-control {
+  width: 100%;
+  border-radius: 0.5rem;
+  border: 1px solid rgb(209 213 219 / var(--tw-border-opacity, 1));
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
+  padding: 0.625rem 1.25rem;
+  transition: all 0.2s ease;
+  outline: none;
+}
+
+.form-control:hover {
+  border-color: rgb(141 53 227 / 0.6);
+}
+
+.form-select:hover {
+  border-color: rgb(141 53 227 / 1);
+}
+
+.form-control:focus {
+  border-color: rgb(141 53 227 / 1);
+  box-shadow: 0 0 0 2px rgba(141, 53, 227, 0.25);
+  outline: none;
+} */
+
+
 input[type="range"]::-webkit-slider-thumb{
   height: 1.25rem;
   width: 1.25rem;
-  background: #1C64F2;
+  background: #8D35E3;
   border-radius: 9999px;
   border: 0;
   appearance: none;
